fix: lower z-index on the chartsLoader to stay underneath the NavMenu.

--- a/frontend/src/app/pages/coin-details/coin-charts/coin-charts.component.scss
+++ b/frontend/src/app/pages/coin-details/coin-charts/coin-charts.component.scss
@@ -16,7 +16,7 @@
   position: absolute;
   top: 0;
   pointer-events: none;
-  z-index: 20;
+  z-index: 5;
   border-radius: var(--radius-l);
   opacity: .2;
   animation: skeleton-loader .75s linear infinite alternate;
